fix(prediction): add row wrap

--- a/src/app/prediction/prediction.component.sass
+++ b/src/app/prediction/prediction.component.sass
@@ -36,3 +36,6 @@ textarea
   color: #041F4E !important
   width: 1rem
   height: 1rem
+
+#predictions
+  flex-flow: row wrap
